# lab-5-oop-rootint

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  example_main.cpp  l.sh  landlord.cpp  landlord.h
